--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,7 @@ repositories {
 }
 
 dependencies {
-	// Commented out the jpa dependency till we configure the sql with the project
-//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
